[gd_scene load_steps=4 format=3 uid="uid://b71utmvkkjuka"]

[ext_resource type="Script" path="res://scripts/GUIscript.gd" id="1_21rjd"]
[ext_resource type="Texture2D" uid="uid://qonvomv1xq3c" path="res://assets/images/eye.svg" id="2_mai3b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1juo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -211.0
offset_right = 482.0
offset_bottom = -5.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_t1juo")
script = ExtResource("1_21rjd")

[node name="Health" type="Label" parent="Panel"]
layout_mode = 1
offset_left = -2.0
offset_top = 61.0
offset_right = 50.0
offset_bottom = 84.0
text = "Health"

[node name="ThirstBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_top = 141.0
offset_right = 235.0
offset_bottom = 168.0
grow_horizontal = 2

[node name="Thirst" type="Label" parent="Panel"]
layout_mode = 1
offset_left = -3.0
offset_top = 141.0
offset_right = 44.0
offset_bottom = 164.0
text = "Thirst"

[node name="HungerBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_top = 101.0
offset_right = 235.0
offset_bottom = 128.0
grow_horizontal = 2

[node name="Hunger" type="Label" parent="Panel"]
layout_mode = 1
offset_left = -3.0
offset_top = 101.0
offset_right = 55.0
offset_bottom = 124.0
text = "Hunger"

[node name="HealthBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_top = 61.0
offset_right = 236.0
offset_bottom = 88.0
grow_horizontal = 2
value = 100.0

[node name="SanityBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -209.0
offset_top = -26.0
offset_right = 237.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
value = 36.03

[node name="Sanity" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 24.0
grow_vertical = 0
texture = ExtResource("2_mai3b")
